Fix short name, improve contrast, add service worker

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -29,11 +29,11 @@ body {
 }
 
 a {
-    color: #7b6fb7;
+    color: #6457a6;
 }
 
 a:hover {
-    color: #9882ac;
+    color: #766ab5;
 }
 
 a:visited {
